[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Hiscores.gd" type="Script" id=1]
[ext_resource path="res://img/ui/title.png" type="Texture" id=2]
[ext_resource path="res://fnt/xkcd-script.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="Hiscores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequestGetHS" type="HTTPRequest" parent="."]

[node name="HTTPRequestSubmitHS" type="HTTPRequest" parent="."]

[node name="BG" type="TextureRect" parent="."]
visible = false
margin_top = -71.5455
margin_right = 1024.0
margin_bottom = 440.454
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -111.0
margin_bottom = -79.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You took 133.7 seconds to defeat the bear."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -68.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(Enter to submit)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -30.5
margin_bottom = 12.5
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 20
placeholder_text = "Username"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hiscores" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 297.0
margin_top = -278.0
margin_right = -275.0
margin_bottom = -22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Control" parent="Hiscores"]
margin_right = 452.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Loading hiscores..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Control" parent="Hiscores"]
margin_top = 26.0
margin_right = 452.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score3" type="Control" parent="Hiscores"]
margin_top = 52.0
margin_right = 452.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score4" type="Control" parent="Hiscores"]
margin_top = 78.0
margin_right = 452.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score5" type="Control" parent="Hiscores"]
margin_top = 104.0
margin_right = 452.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score6" type="Control" parent="Hiscores"]
margin_top = 130.0
margin_right = 452.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score6"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score6"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score7" type="Control" parent="Hiscores"]
margin_top = 156.0
margin_right = 452.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score7"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score7"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score8" type="Control" parent="Hiscores"]
margin_top = 182.0
margin_right = 452.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score8"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score8"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score9" type="Control" parent="Hiscores"]
margin_top = 208.0
margin_right = 452.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score9"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score9"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score10" type="Control" parent="Hiscores"]
margin_top = 234.0
margin_right = 452.0
margin_bottom = 256.0
rect_min_size = Vector2( 0, 22 )

[node name="Name" type="Label" parent="Hiscores/Score10"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Hiscores/Score10"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequestGetHS" to="." method="_get_highscore_response"]
[connection signal="request_completed" from="HTTPRequestSubmitHS" to="." method="_get_submit_response"]
[connection signal="text_entered" from="Username" to="." method="submit"]
